--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 	margin: 0 0 0 0;
 }
 
-.text{
+#text{
 	color: white;
 	text-align: center;
 	font-size: 45px;
@@ -18,6 +18,7 @@
 	width: 100%;
 	height: 1650px;
 	background-color: whitesmoke;
+	margin: 0 0 0 0;
 }
 
 .koptext{
