--- a/style.css
+++ b/style.css
@@ -1,10 +1,120 @@
 @charset "UTF-8";
 /* CSS Document */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* EINDE CSS RESET */
+/* BEGINRESPONSIVE OPZET */
+* {
+    box-sizing: border-box;
+}
+.row:after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+[class*="col-"] {
+    float: left;
+    width: 100%;
+	/* Ter demonstratie hebben kolommen een border, doe maar weg voor je eigen werk */
+}
+
+/* Voor MOBIEL */
+@media only screen and (max-width: 600px) {
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+	
+	#grayonmobile{
+		background-color: gray;
+		color:black;
+		height: 100%;
+	}
+	
+	#lightgrayonmobile{
+		background-color: lightgray;
+		color:black;
+		height: 100%;
+	}
+	/* MOBIELE code binnen deze accolades van het @media stuk */
+}
+
+/* Voor DESKTOP */
+@media only screen and (min-width: 601px) {
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+	
+	/* DESKTOP code binnen deze accolades van het @media stuk */
+	
+}
+
+
 #bovenbalk{
 	width: 100%;
 	background-color: black;
 	height: 55px;
-	margin: 0 0 0 0;
 }
 
 #text{
@@ -16,9 +126,8 @@
 
 .content{
 	width: 100%;
-	height: 1650px;
+	height: 100%;
 	background-color: whitesmoke;
-	margin: 0 0 0 0;
 }
 
 .koptext{
@@ -29,13 +138,15 @@
 }
 
 #miniferre1{
-	margin-left: 250px;
+	width: 75%;
+	margin-left: 20px;
 }
 
 #louis{
-	margin-left: 250px;
+	margin-left: 20px;
+	width: 75%;
 }
 
 #johan{
-	margin-left: 250px;
+	margin-left: 20px;;
 }
